--- a/Blog-Project/public/styles/post.css
+++ b/Blog-Project/public/styles/post.css
@@ -2,9 +2,17 @@
     margin: 0;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+
 body{
     background-color: #040303;
-
+    padding-bottom: 120px;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 
